# excalidraw-diagram-skill

./: .gitignore  GALLERY.md  README.md  SECURITY.md  SKILL.md
.github/workflows/: ci.yml
docs/: index.html
examples/: after-good-layout.excalidraw  ag-ui-protocol.excalidraw  all-patterns.excalidraw  before-bad-layout.excalidraw  cycle-feedback-loop.excalidraw  decision-flow.excalidraw  rag-pipeline.excalidraw  simple-flow.excalidraw
references/: color-palette.md  convert_mermaid.py  element-templates.md  generate_demo_gif.py  lint_excalidraw.py  pyproject.toml  render_excalidraw.py  render_template.html  setup.sh  shortform.py  skill-deep-dive.md  themes.py  validate_excalidraw.py  vendor_excalidraw.py
references/tests/: test_bounding_box.py  test_cli.py  test_examples.py  test_gif_generation.py  test_lint.py  test_render_snapshots.py  test_server.py  test_v2_attractiveness.py  test_v2_functionality.py  test_v2_performance.py  test_v2_reliability.py  test_v2_security.py  test_v2_stability.py  test_v2_usability.py  test_validate.py  test_vendor.py
